2003-12-23  Saito <saito2@digitalme.com>

	* timidity/reverb.[ch], timidity/readmidi.[ch], timidity/playmidi.[ch],
	  timidity/tables.[ch], timidity/effect.c:
	  Implement XG Multi EQ.
	  Implement XG Part EQ (tone only).

2003-12-23  Kentaro Sato <kentaro@ranvis.com>

	* timidity/playmidi.c, timidity/readmidi.[ch], timidity/reverb.[ch]
	  timidity/tables.[ch], timidity/timidity.c:
	  Support for GM2 On SysEx. and pan table.

2003-12-21  Saito <saito2@digitalme.com>

	* timidity/reverb.[ch], timidity/readmidi.c, timidity/playmidi.c:
	  Fix about Insertion Effect.
	  Sort out codes.
	  Fix lowpass filter for system effect.

2003-12-16  Saito <saito2@digitalme.com>

	* timidity/reverb.[ch], timidity/readmidi.c:
	  Implement Plate Reverberator.
	* timidity/mix.c:
	  Fix tremolo waveform for SoundFont.

2003-12-12  Saito <saito2@digitalme.com>

	* timidity/playmidi.[ch], timidity/resample.c:
	  Fix around vibrato.

2003-12-09  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/m2m.c (m2m_process_events): Fix drum volumes

2003-12-07  Saito <saito2@digitalme.com>

	* timidity/reverb.c, timidity/readmidi.c:
	  Fix parameters of HEXA-CHORUS.

2003-12-06  Saito <saito2@digitalme.com>

	* timidity/reverb.[ch], timidity/readmidi.c, timidity/playmidi.c:
	  Fix Insertion Effect.
	  Implement HEXA-CHORUS for Insertion Effect.
	  Fix around opt_pan_delay.

2003-12-04  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.c, timidity/timidity.[ch]:
	  Support for voice LPF command line option

2003-12-04  Saito <saito2@digitalme.com>

	* timidity/reverb.[ch], timidity/readmidi.[ch], timidity/playmidi.c:
	  Fasten initialization of Insertion Effect.
	  Implement new LPF for System Effect.

2003-12-03  Saito <saito2@digitalme.com>

	* interface/w32g_res.rc:
	  Fix dialog around temperaments.
	* timidity/reverb.[ch], timidity/readmidi.c:
	  Implement new algorithm for Distortion and Overdrive effect.
	* timidity/mix.c:
	  Fix a comment.
	  